<resources>
    <string name="app_name">TicketOnlineApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_splash">SplashActivity</string>

    <!--    -->
    <!--    String used for activity_home-->
    <string name="find_your_best_movie">Find your Best Movie </string>
    <string name="now_playing">Now Playing</string>
    <string name="view_all">View all</string>
    <string name="coming_soon">Coming soon</string>
    <string name="expired_movie">Expired Movie</string>
    <string name="promotions">Promotions</string>
    <string name="services">Services</string>
    <string name="cities">Cities</string>
    <string name="CheckUsed">CheckUsed</string>
    <!--    -->


    <!--    -->
    <!--    String used for activity_success_checkout-->
    <string name="happy_watching">Happy Watching!</string>
    <string name="inform_ticket_buying_successfully">You have successfully bought the ticket</string>
    <string name="my_ticket">My Ticket</string>
    <string name="discover_new_movie">Discover new movie?</string>
    <string name="back_to_home">Back to home</string>

    <string name="selected_item">Select city/ province</string>


    <!--    -->
    <!--    String used for activity_movie_checkout-->
    <string name="checkout_movie">Checkout Movie</string>
    <string name="order_id">ID Order</string>
    <string name="cinema">Cinema</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="seat_number">Seat Number</string>
    <string name="price">Price</string>
    <string name="choose_a_promotion_card">Choose a promo card</string>
    <string name="select_voucher">+ Select voucher</string>
    <string name="total">Total</string>
    <string name="your_wallet">Your Wallet</string>
    <string name="checkout">Checkout</string>

    <!--    -->

    <!--    -->
    <!--    String used for activity_edit_account-->
    <string name="edit_your_account">Edit Your Account</string>
    <string name="change_your_name">Change your name</string>
    <string name="full_name">Full Name</string>
    <string name="change_your_email_address">Change your email address</string>
    <string name="email_address">Email Address</string>
    <string name="update_my_account">Update My Account</string>
    <string name="student">Student</string>
    <!--    -->

    <!--facebook key-->
    <string name="facebook_app_id">984696693270026</string>
    <string name="fb_login_protocol_scheme">fb984696693270026</string>
    <string name="facebook_client_token">71ebfcd39435df7d461f1f01c44990e8</string>
    <!--<string name="default_web_client_id">154016756693-9bttk960qik82vukbbvln88s448af3f7.apps.googleusercontent.com</string>-->
</resources>