<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_background_1"
    tools:context=".Activity.Booking.SuccessCheckoutActivity">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:id="@+id/imgSuccessCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:src="@drawable/success_checkout_logo"/>

    <TextView
        android:id="@+id/txtHappyWatching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/happy_watching"
        android:fontFamily="@font/montserrat500"
        android:textSize="24sp"
        android:layout_marginTop="72dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/txtTicketBoughtSuccess"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/inform_ticket_buying_successfully"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/montserrat300"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnToMyTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundstyle20"
        android:backgroundTint="@color/main_color"
        android:text="@string/my_ticket"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat500"
        android:textSize="18sp"
        android:layout_marginTop="72dp"

        android:layout_marginHorizontal="60dp"

        />
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtDiscoverNewMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover_new_movie"
            android:fontFamily="@font/montserrat400"
            android:textSize="14sp"
            android:textColor="#ADADAD"/>

        <TextView
            android:id="@+id/txtToHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_home"
            android:fontFamily="@font/montserrat400"
            android:textSize="14sp"
            android:textColor="#449EFF"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>