<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background_1"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:context=".Activity.User.EditAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="-75dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp">

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="start"
                    android:background="@drawable/back_icon" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="@string/edit_your_account"
                    android:textColor="@color/white_background"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/avatar_img"
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:scaleType="fitXY"
                android:src="@drawable/profile"
                app:riv_corner_radius="46dp" />

            <ImageView
                android:id="@+id/add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/add"
                android:translationY="-14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/montserrat400"
                android:text="@string/change_your_name"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:autofillHints="name"
                android:background="@drawable/edittext_boder"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:singleLine="true"
                android:textColor="@color/white_background"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/montserrat400"
                android:text="@string/change_your_email_address"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edittext_boder"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:singleLine="true"
                android:textColor="@color/white_background"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp" />


            <Button
                android:id="@+id/UpdateBtn"
                style="@android:style/Widget.Button"
                android:layout_width="255dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="44dp"
                android:layout_marginBottom="68dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/update_my_account"
                android:textColor="@color/white_background"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>